# BiPAnalysisCodeShare

./: .pre-commit-config.yaml  README.md
avi_analyse/: README.md  requirements.txt
avi_analyse/code/: BirdTag.py  run_analysis.py
avi_analyse/code/foraging/: acceleration_analysis.py
avi_analyse/code/read/: read_in.py
avi_analyse/code/wind/: derive_wind.py
avimove/: README.md  example_DVL_config.json  pyproject.toml  requirements.txt  test_axytrek.py  testing_to_delete.py
avimove/avimove/: __init__.py  run_analysis.py
avimove/avimove/cal_wind2/: requirements.txt
avimove/avimove/cal_wind2/code/: main.py
avimove/avimove/forage_detect/: DVLaccuracy.py  DVLexplanation.ipynb  Dockerfile  __init__.py  requirements.txt
avimove/avimove/forage_detect/src/: DVLaccuracy.py  __init__.py  birdTag.py  dvl.py  main.py  main_func.py  main_func_tester.py
avimove/avimove/forage_detect/src/utils/: DVLutils.py  analyseAcc.py  analyseGPS.py  loadIn.py
cal_wind2/: README.md  requirements.txt
cal_wind2/code/: main.py  main_func.py
code/: BirdTag.py  main.py  main_func.py  run_analysis.py
code/foraging/: acceleration_analysis.py
code/read/: read_in.py
code/wind/: derive_wind.py
forage_detect/: DVLRead.py  DVLaccuracy.py  DVLexplanation.ipynb  ToDo.md  birdTag.py  dvl.py  main_func.py  testDVL.py
forage_detect/src/: birdTag.py
forage_detect/utils/: DVLutils.py  analyseAcc.py  analyseGPS.py  loadIn.py
